<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asal Project</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="log_in"> Login </string>
    <string name="log_out">Logout</string>
    <string name="register">Register</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="bottomText">                     Welcome to my new application *******************************************</string>
    <string name="add_btn">Add a note</string>

</resources>