<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:padding="16dp"
    >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="115dp"
        android:layout_height="135dp"
        android:layout_gravity="center"
        android:padding="25dp"
        android:src="@drawable/login" />

    <EditText
        android:id="@+id/username_edit"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="#DCDCDC"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/username"
        android:gravity="center"
        android:textSize="17dp"
        />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="#DCDCDC"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:gravity="center"
        android:textSize="17dp"
        android:inputType="textPassword" 
        
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17dp" 
        android:paddingTop="20dp"
        android:orientation="horizontal" 
        >

        <Button
            android:id="@+id/Registration_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register" 
            android:layout_marginLeft="80dp"
            />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
             />
      
        

    </LinearLayout>
   
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bottomText" 
            android:gravity="bottom|center"/>



</LinearLayout>

